Update Dockerfile to copy server start script and change CMD to use it